--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,10 @@
 version: "3"
 services:
+    ttnmapper-reader:
+        build: ./ttnmapper-reader
+        restart: always
+        ports:
+            - "3000:3000"
     db:
         image: postgres
         environment:
