--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,7 +25,7 @@ services:
         container_name: pgadmin4_container
         depends_on:
             - db
-        image: dpage/pgadmin4
+        image: dpage/pgadmin4:6
         restart: always
         environment:
             PGADMIN_DEFAULT_EMAIL: admin@admin.com
@@ -43,8 +43,8 @@ services:
             # Management Web Interface
             - 15672
         volumes:
-            - ~/.docker-conf/rabbitmq/data/:/var/lib/rabbitmq/
-            - ~/.docker-conf/rabbitmq/log/:/var/log/rabbitmq
+            - rabbitmq-data:/var/lib/rabbitmq/
 volumes:
     postgres-data:
     pgadmin-data:
+    rabbitmq-data:
