--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,7 +8,7 @@ jobs:
     yamllint:
         runs-on: ubuntu-20.04
         steps:
-            - name: Frenck's yamllint
-              # You may pin to the exact commit or the version.
-              # uses: frenck/action-yamllint@57b4ef7a8959708336293b59cce0367952382980
+            - name: ⤵️ Check out code from GitHub
+              uses: actions/checkout@v3
+            - name: 🚀 Run yamllint
               uses: frenck/action-yamllint@v1.4.0
