--- a/ttnmapper-reader/package.json
+++ b/ttnmapper-reader/package.json
@@ -2,8 +2,7 @@
     "name": "ttnmapper-reader",
     "version": "0.0.1",
     "description": "",
-    "author": "",
-    "private": true,
+    "author": "Bastian Hodapp",
     "license": "UNLICENSED",
     "scripts": {
         "build": "nest build",
