--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,15 @@
 ---
 version: "3"
 services:
-    ttnmapper-reader:
-        build: ./ttnmapper-reader
-        restart: always
-        ports:
-            # Backend API
-            - "3000:3000"
-        depends_on:
-            - db
-            - rabbitmq
+    # ttnmapper-reader:
+    #     build: ./ttnmapper-reader
+    #     restart: always
+    #     ports:
+    #         # Backend API
+    #         - "3000:3000"
+    #     depends_on:
+    #         - db
+    #         - rabbitmq
     db:
         image: postgres
         environment:
@@ -36,15 +36,15 @@ services:
             - "80"
         volumes:
             - pgadmin-data:/var/lib/pgadmin
-    rabbitmq:
-        image: rabbitmq:3-management-alpine
-        ports:
-            # AMQP
-            - 5672:5672
-            # Management Web Interface
-            - 15672
-        volumes:
-            - rabbitmq-data:/var/lib/rabbitmq/
+    # rabbitmq:
+    #     image: rabbitmq:3-management-alpine
+    #     ports:
+    #         # AMQP
+    #         - 5672:5672
+    #         # Management Web Interface
+    #         - 15672
+    #     volumes:
+    #         - rabbitmq-data:/var/lib/rabbitmq/
 volumes:
     postgres-data:
     pgadmin-data:
