--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     },
     "dependencies": {
         "@nestjs/common": "^9.3.11",
+        "@nestjs/config": "^2.3.1",
         "@nestjs/core": "^9.3.11",
         "@nestjs/platform-express": "^9.3.11",
         "@nestjs/typeorm": "^9.0.1",
