--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,11 @@
+# Prostgres
 DATABASE_HOST=localhost
 DATABASE_USER=postgres
+DATABASE_PORT=5432
 DATABASE_PASSWORD=postgres
 DATABASE_DATABASE=ttnmapper-reader
+
+# General
+PORT=3000
+MODE=DEV
+RUN_MIGRATIONS=true
