--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,7 @@ services:
         environment:
             - POSTGRES_USER=postgres
             - POSTGRES_PASSWORD=postgres
-            - POSTGRES_DB=ttn-locator
+            - POSTGRES_DB=ttnmapper-reader
         restart: always
         ports:
             # PostgreSQL Port
