--- a/package.json
+++ b/package.json
@@ -1,73 +1,32 @@
 {
     "name": "ttnmapper-reader",
-    "version": "0.0.1",
-    "description": "",
-    "author": "Bastian Hodapp",
-    "license": "UNLICENSED",
+    "version": "1.0.0",
+    "license": "MIT",
     "scripts": {
-        "build": "nest build",
-        "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-        "start": "nest start",
-        "start:dev": "nest start --watch",
-        "start:debug": "nest start --debug --watch",
-        "start:prod": "node dist/main",
-        "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-        "test": "jest",
-        "test:watch": "jest --watch",
-        "test:cov": "jest --coverage",
-        "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-        "test:e2e": "jest --config ./test/jest-e2e.json",
+        "start": "node ./dist/index.js",
+        "dev": "nodemon ./src/index.ts",
+        "build": "tsc -p .",
+        "format": "prettier --write \"src/**/*.ts\"",
+        "lint": "eslint \"src/**/*.ts\" --fix",
         "compose:up": "docker-compose up -d"
     },
-    "dependencies": {
-        "@nestjs/common": "^9.3.11",
-        "@nestjs/config": "^2.3.1",
-        "@nestjs/core": "^9.3.11",
-        "@nestjs/platform-express": "^9.3.11",
-        "@nestjs/typeorm": "^9.0.1",
-        "pg": "^8.10.0",
-        "reflect-metadata": "^0.1.13",
-        "rxjs": "^7.8.0",
-        "typeorm": "^0.3.12"
-    },
     "devDependencies": {
-        "@nestjs/cli": "^9.3.0",
-        "@nestjs/schematics": "^9.0.4",
-        "@nestjs/testing": "^9.3.11",
-        "@types/express": "^4.17.17",
-        "@types/jest": "29.2.4",
-        "@types/node": "18.11.18",
-        "@types/supertest": "^2.0.12",
-        "@typescript-eslint/eslint-plugin": "^5.56.0",
-        "@typescript-eslint/parser": "^5.56.0",
-        "eslint": "^8.36.0",
-        "eslint-config-prettier": "^8.8.0",
-        "eslint-plugin-prettier": "^4.2.1",
-        "jest": "29.3.1",
-        "prettier": "^2.8.6",
-        "source-map-support": "^0.5.21",
-        "supertest": "^6.3.3",
-        "ts-jest": "29.0.3",
-        "ts-loader": "^9.4.2",
-        "ts-node": "^10.9.1",
-        "tsconfig-paths": "4.1.1",
-        "typescript": "^4.9.5"
+        "@types/express": "^4.17",
+        "@types/node": "^18.15",
+        "@typescript-eslint/eslint-plugin": "^5.57.1",
+        "@typescript-eslint/parser": "^5.57.1",
+        "eslint": "^8.37",
+        "eslint-config-prettier": "^8.8",
+        "eslint-plugin-prettier": "^4.2",
+        "nodemon": "^2.0",
+        "prettier": "^2.8.7",
+        "prettier-eslint": "^15.0",
+        "prisma": "^4.0",
+        "ts-node": "^10.9",
+        "typescript": "^5.0"
     },
-    "jest": {
-        "moduleFileExtensions": [
-            "js",
-            "json",
-            "ts"
-        ],
-        "rootDir": "src",
-        "testRegex": ".*\\.spec\\.ts$",
-        "transform": {
-            "^.+\\.(t|j)s$": "ts-jest"
-        },
-        "collectCoverageFrom": [
-            "**/*.(t|j)s"
-        ],
-        "coverageDirectory": "../coverage",
-        "testEnvironment": "node"
+    "dependencies": {
+        "@prisma/client": "^4.0",
+        "express": "^4.18"
     }
 }
