--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,21 +1,11 @@
 {
     "compilerOptions": {
+        "target": "es6",
         "module": "commonjs",
-        "declaration": true,
-        "removeComments": true,
-        "emitDecoratorMetadata": true,
-        "experimentalDecorators": true,
-        "allowSyntheticDefaultImports": true,
-        "target": "es2017",
-        "sourceMap": true,
-        "outDir": "./dist",
+        "rootDir": "./src",
+        "moduleResolution": "node",
         "baseUrl": "./",
-        "incremental": true,
-        "skipLibCheck": true,
-        "strictNullChecks": false,
-        "noImplicitAny": false,
-        "strictBindCallApply": false,
-        "forceConsistentCasingInFileNames": false,
-        "noFallthroughCasesInSwitch": false
+        "esModuleInterop": true,
+        "strict": true
     }
 }
