--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
         "compose:up": "docker-compose up -d"
     },
     "devDependencies": {
-        "@types/express": "^4.17",
         "@types/node": "^18.15",
         "@typescript-eslint/eslint-plugin": "^5.57.1",
         "@typescript-eslint/parser": "^5.57.1",
@@ -21,12 +20,13 @@
         "nodemon": "^2.0",
         "prettier": "^2.8.7",
         "prettier-eslint": "^15.0",
-        "prisma": "^4.0",
+        "prisma": "^4.12.0",
         "ts-node": "^10.9",
         "typescript": "^5.0"
     },
     "dependencies": {
         "@prisma/client": "^4.0",
-        "express": "^4.18"
+        "fastify": "^4.15.0",
+        "fastify-prisma-client": "^5.0.0"
     }
 }
