--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
         "build": "tsc -p .",
         "format": "prettier --write \"src/**/*.ts\"",
         "lint": "eslint \"src/**/*.ts\" --fix",
-        "compose:up": "docker-compose up -d"
+        "compose:up": "docker-compose up -d",
+        "seed": "ts-node prisma/seed.ts",
+        "migrate": "prisma migrate dev --name init"
     },
     "devDependencies": {
         "@types/node": "^18.15",
