--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,5 @@
 ---
-name: Lint yml files
+name: Test everything
 
 on:
     push:
@@ -13,3 +13,74 @@ jobs:
               uses: actions/checkout@v3
             - name: 🚀 Run yamllint
               uses: frenck/action-yamllint@v1.4.0
+    prisma-migrate:
+        runs-on: ubuntu-latest
+        services:
+            postgres:
+                image: postgres
+                env:
+                    POSTGRES_USER: postgres
+                    POSTGRES_PASSWORD: postgres
+                options: >-
+                    --health-cmd pg_isready
+                    --health-interval 10s
+                    --health-timeout 5s
+                    --health-retries 5
+                ports:
+                    - 5432:5432
+        env:
+            DATABASE_URL: postgresql://postgres:postgres@localhost:5432/ttnmapper-reader
+        steps:
+            - uses: actions/checkout@v3
+            - uses: actions/setup-node@v1
+              with:
+                  node-version: '14.x'
+            - uses: pnpm/action-setup@v2
+              with:
+                  version: 7
+
+            - name: pnpm install
+              run: pnpm install --frozen-lockfile
+            - name: pnpm build
+              run: pnpm run build
+
+            - name: pnpm prisma generate
+              run: npx prisma migrate deploy
+            - name: Prisma seed
+              run: pnpm run seed
+    eslint:
+        runs-on: ubuntu-latest
+        steps:
+            - uses: actions/checkout@v3
+            - uses: actions/setup-node@v1
+              with:
+                  node-version: '14.x'
+            - uses: pnpm/action-setup@v2
+              with:
+                  version: 7
+
+            - run: pnpm install --frozen-lockfile
+            - run: pnpm run build
+
+            - name: Run eslint scan
+              run: pnpm run eslint:scan
+    build:
+        runs-on: ubuntu-latest
+        needs: [prisma-migrate, eslint]
+        steps:
+            - uses: actions/checkout@v3
+            - uses: actions/setup-node@v1
+              with:
+                  node-version: '14.x'
+            - uses: pnpm/action-setup@v2
+              with:
+                  version: 7
+
+            - run: pnpm install --frozen-lockfile
+            - run: pnpm run build
+
+            - name: Upload artifact
+              uses: actions/upload-artifact@v2
+              with:
+                  name: ttnmapper-reader
+                  path: dist
