--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
         "dev": "nodemon ./src/index.ts",
         "build": "tsc -p .",
         "format": "prettier --write \"src/**/*.ts\"",
-        "lint": "eslint \"src/**/*.ts\" --fix",
+        "eslint:scan": "eslint",
+        "eslint:fix": "eslint --fix",
         "compose:up": "docker-compose up -d",
         "seed": "ts-node prisma/seed.ts",
         "migrate": "prisma migrate dev --name init"
