--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "prisma:reset": "prisma migrate reset"
     },
     "devDependencies": {
+        "@types/express": "^4.17.17",
         "@types/node": "^18.15",
         "@typescript-eslint/eslint-plugin": "^5.57.1",
         "@typescript-eslint/parser": "^5.57.1",
@@ -28,8 +29,7 @@
     },
     "dependencies": {
         "@prisma/client": "^4.0",
-        "fastify": "^4.15.0",
-        "fastify-prisma-client": "^5.0.0"
+        "express": "^4.18.2"
     },
     "prisma": {
         "seed": "ts-node prisma/seed.ts"
