--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     },
     "dependencies": {
         "@prisma/client": "^4.0",
-        "express": "^4.18.2"
+        "express": "^4.18.2",
+        "pino": "^8.11.0",
+        "pino-http": "^8.3.3"
     },
     "prisma": {
         "seed": "ts-node prisma/seed.ts"
