--- a/package.json
+++ b/package.json
@@ -2,32 +2,38 @@
     "name": "ttnmapper-reader",
     "version": "1.0.0",
     "license": "MIT",
+    "main": "dist/server.js",
     "scripts": {
-        "start": "node ./dist/index.js",
-        "dev": "nodemon ./src/index.ts | pino-pretty --colorize --levelFirst",
+        "start": "node ./dist/server.js",
+        "dev": "nodemon ./src/server.ts | pino-pretty --colorize --levelFirst",
         "build": "tsc -p .",
-        "format": "prettier --write \"src/**/*.ts\"",
+        "prettier:format": "prettier --write \"src/**/*.ts\"",
         "eslint:scan": "eslint",
         "eslint:fix": "eslint --fix",
         "compose:up": "docker-compose up -d",
-        "prisma:reset": "prisma migrate reset"
+        "prisma:reset": "prisma migrate reset",
+        "jest:test": "jest --coverage"
     },
     "devDependencies": {
         "@types/express": "^4.17.17",
+        "@types/jest": "^29.5.0",
         "@types/node": "^18.15",
+        "@types/supertest": "^2.0.12",
         "@typescript-eslint/eslint-plugin": "^5.57.1",
         "@typescript-eslint/parser": "^5.57.1",
         "eslint": "^8.37",
         "eslint-config-prettier": "^8.8",
         "eslint-plugin-prettier": "^4.2",
-        "kill-port": "^2.0.1",
-        "nodemon": "^2.0",
+        "jest": "^29.5.0",
+        "nodemon": "^2.0.22",
         "pino-pretty": "^10.0.0",
         "prettier": "^2.8.7",
         "prettier-eslint": "^15.0",
         "prisma": "^4.12.0",
-        "ts-node": "^10.9",
-        "typescript": "^5.0"
+        "supertest": "^6.3.3",
+        "ts-jest": "^29.1.0",
+        "ts-node": "^10.9.1",
+        "typescript": "^5.0.3"
     },
     "dependencies": {
         "@prisma/client": "^4.0",
