--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
         "eslint:fix": "eslint --fix",
         "compose:up": "docker-compose up -d",
         "prisma:reset": "prisma migrate reset",
-        "jest:test": "jest --coverage"
+        "jest:coverage": "jest --coverage",
+        "jest:test": "jest"
     },
     "devDependencies": {
         "@types/express": "^4.17.17",
