--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,13 +7,13 @@ on:
 
 jobs:
     yamllint:
-        runs-on: ubuntu-20.04
+        runs-on: ubuntu-latest
         steps:
             - name: ⤵️ Check out code from GitHub
               uses: actions/checkout@v3
             - name: 🚀 Run yamllint
               uses: frenck/action-yamllint@v1.4.0
-    prisma-migrate:
+    prisma-migrate-and-jest:
         runs-on: ubuntu-latest
         services:
             postgres:
@@ -46,6 +46,9 @@ jobs:
 
             - name: Prisma seed
               run: npx prisma migrate reset --force
+
+            - name: Run tests
+              run: pnpm run jest:test
     eslint:
         runs-on: ubuntu-latest
         steps:
@@ -64,7 +67,7 @@ jobs:
               run: pnpm run eslint:scan
     build:
         runs-on: ubuntu-latest
-        needs: [prisma-migrate, eslint]
+        needs: [prisma-migrate-and-jest, eslint]
         steps:
             - uses: actions/checkout@v3
             - uses: actions/setup-node@v3
