--- a/package.json
+++ b/package.json
@@ -2,10 +2,9 @@
     "name": "ttnmapper-reader",
     "version": "1.0.0",
     "license": "MIT",
-    "main": "dist/server.js",
     "scripts": {
-        "start": "node ./dist/server.js",
-        "dev": "nodemon ./src/server.ts | pino-pretty --colorize --levelFirst",
+        "start": "node dist/server.js",
+        "dev": "nodemon -e ts,js --exec ts-node -r tsconfig-paths/register ./src/server.ts | pino-pretty --colorize --levelFirst",
         "build": "tsc -p .",
         "prettier:format": "prettier --write \"src/**/*.ts\"",
         "eslint:scan": "eslint",
@@ -18,26 +17,27 @@
     "devDependencies": {
         "@types/express": "^4.17.17",
         "@types/jest": "^29.5.0",
-        "@types/node": "^18.15",
+        "@types/node": "^18.15.11",
         "@types/supertest": "^2.0.12",
-        "@typescript-eslint/eslint-plugin": "^5.57.1",
-        "@typescript-eslint/parser": "^5.57.1",
-        "eslint": "^8.37",
-        "eslint-config-prettier": "^8.8",
-        "eslint-plugin-prettier": "^4.2",
+        "@typescript-eslint/eslint-plugin": "^5.58.0",
+        "@typescript-eslint/parser": "^5.58.0",
+        "eslint": "^8.38.0",
+        "eslint-config-prettier": "^8.8.0",
+        "eslint-plugin-prettier": "^4.2.1",
         "jest": "^29.5.0",
         "nodemon": "^2.0.22",
         "pino-pretty": "^10.0.0",
         "prettier": "^2.8.7",
-        "prettier-eslint": "^15.0",
+        "prettier-eslint": "^15.0.1",
         "prisma": "^4.12.0",
         "supertest": "^6.3.3",
         "ts-jest": "^29.1.0",
         "ts-node": "^10.9.1",
-        "typescript": "^5.0.3"
+        "tsconfig-paths": "^4.2.0",
+        "typescript": "^5.0"
     },
     "dependencies": {
-        "@prisma/client": "^4.0",
+        "@prisma/client": "^4.12.0",
         "express": "^4.18.2",
         "pino": "^8.11.0",
         "pino-http": "^8.3.3"
