--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,15 +3,13 @@
         "moduleResolution": "node",
         "target": "ESNext",
         "module": "CommonJS",
-        "rootDir": "./src",
-        "baseUrl": "./src",
+        "rootDir": "./",
+        "baseUrl": "./",
         "esModuleInterop": true,
         "strict": true,
         "outDir": "./dist",
         "paths": {
             "src/*": ["src/*"]
         }
-    },
-    "include": ["./src"],
-    "exclude": ["prisma", "node_modules", "dist"]
+    }
 }
