--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     },
     "dependencies": {
         "@prisma/client": "^4.12.0",
-        "express": "^4.18.2",
+        "express": "^5.0.0-beta.1",
         "pino": "^8.11.0",
         "pino-http": "^8.3.3"
     },
