--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,5 +11,8 @@
         "paths": {
             "@/*": ["src/*"]
         }
+    },
+    "ts-node": {
+        "require": ["tsconfig-paths/register"]
     }
 }
