--- a/.env.sample
+++ b/.env.sample
@@ -1,5 +1,5 @@
 # Prostgres
-DATABASE_URL="postgresql://postgres:postgres@localhost:5432/ttnmapper-reader"
+DATABASE_URL=postgresql://postgres:postgres@localhost:5432/ttnmapper-reader
 
 # General
 PORT=3000
