--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
     "version": "1.0.0",
     "license": "MIT",
     "scripts": {
-        "start": "ts-node src/server.ts",
+        "start": "node dist/src/server.js",
         "dev": "nodemon | pino-pretty --colorize --levelFirst",
+        "build": "tsc -p tsconfig.json && tsc-alias -p tsconfig.json",
         "prettier:format": "prettier --write \"src/**/*.ts\"",
         "eslint:scan": "eslint",
         "eslint:fix": "eslint --fix",
