try using docker container registry

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,6 +5,9 @@ on:
     push:
     pull_request:
 
+env:
+    IMAGE_NAME: ttnmapper-reader
+
 jobs:
     yamllint:
         runs-on: ubuntu-latest
@@ -65,7 +68,7 @@ jobs:
 
             - name: Run eslint scan
               run: pnpm run eslint:scan
-    build:
+    build-artifact:
         runs-on: ubuntu-latest
         needs: [prisma-migrate-and-jest, eslint]
         steps:
@@ -85,3 +88,34 @@ jobs:
               with:
                   name: ttnmapper-reader
                   path: dist
+    build-docker:
+        runs-on: ubuntu-latest
+        permissions:
+            packages: write
+            contents: read
+        needs: [prisma-migrate-and-jest, eslint]
+        steps:
+            - uses: actions/checkout@v3
+
+            - name: Build image
+              run: docker build . --file Dockerfile --tag $IMAGE_NAME --label "runnumber=${GITHUB_RUN_ID}"
+
+            - name: Log in to registry
+              # This is where you will update the personal access token to GITHUB_TOKEN
+              run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u $ --password-stdin
+
+            - name: Push image
+              run: |
+                  IMAGE_ID=ghcr.io/${{ github.repository_owner }}/$IMAGE_NAME
+                  # Change all uppercase to lowercase
+                  IMAGE_ID=$(echo $IMAGE_ID | tr '[A-Z]' '[a-z]')
+                  # Strip git ref prefix from version
+                  VERSION=$(echo "${{ github.ref }}" | sed -e 's,.*/\(.*\),\1,')
+                  # Strip "v" prefix from tag name
+                  [[ "${{ github.ref }}" == "refs/tags/"* ]] && VERSION=$(echo $VERSION | sed -e 's/^v//')
+                  # Use Docker `latest` tag convention
+                  [ "$VERSION" == "main" ] && VERSION=latest
+                  echo IMAGE_ID=$IMAGE_ID
+                  echo VERSION=$VERSION
+                  docker tag $IMAGE_NAME $IMAGE_ID:$VERSION
+                  docker push $IMAGE_ID:$VERSION
