add image file from github container registry to composefile

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@
 version: "3"
 services:
     ttnmapper-reader:
+        image: ghcr.io/bassadin/ttnmapper-reader:latest
         build: .
         restart: always
         depends_on:
