--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "jest:test": "jest"
     },
     "devDependencies": {
+        "@types/cron": "^2.0.1",
         "@types/express": "^4.17.17",
         "@types/jest": "^29.5.0",
         "@types/node": "^18.15.11",
@@ -36,11 +37,12 @@
         "ts-node": "^10.9.1",
         "tsc-alias": "^1.8.5",
         "tsconfig-paths": "^4.2.0",
-        "typescript": "^5.0"
+        "typescript": "^5.0.4"
     },
     "dependencies": {
         "@prisma/client": "^4.12.0",
-        "express": "^5.0.0-beta.1",
+        "cron": "^2.3.0",
+        "express": "5.0.0-beta.1",
         "pino": "^8.11.0",
         "pino-http": "^8.3.3"
     },
