--- a/package.json
+++ b/package.json
@@ -41,10 +41,12 @@
     },
     "dependencies": {
         "@prisma/client": "^4.12.0",
+        "@types/superagent": "^4.1.16",
         "cron": "^2.3.0",
         "express": "5.0.0-beta.1",
         "pino": "^8.11.0",
-        "pino-http": "^8.3.3"
+        "pino-http": "^8.3.3",
+        "superagent": "^8.0.9"
     },
     "prisma": {
         "seed": "ts-node prisma/seed.ts"
