--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
         "prisma:reset": "prisma migrate reset",
         "prisma:generate": "prisma generate",
         "jest:coverage": "jest --coverage",
-        "jest:test": "jest"
+        "jest:test": "jest",
+        "jest:watch": "jest --watch"
     },
     "devDependencies": {
         "@types/cron": "^2.0.1",
