--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,21 +18,6 @@ jobs:
               uses: frenck/action-yamllint@v1.4.0
     prisma-migrate-and-jest:
         runs-on: ubuntu-latest
-        services:
-            postgres:
-                image: postgres
-                env:
-                    POSTGRES_USER: postgres
-                    POSTGRES_PASSWORD: postgres
-                options: >-
-                    --health-cmd pg_isready
-                    --health-interval 10s
-                    --health-timeout 5s
-                    --health-retries 5
-                ports:
-                    - 5432:5432
-        env:
-            DATABASE_URL: postgresql://postgres:postgres@localhost:5432/ttnmapper-reader
         steps:
             - uses: actions/checkout@v3
             - uses: actions/setup-node@v3
@@ -41,6 +26,10 @@ jobs:
             - uses: pnpm/action-setup@v2
               with:
                   version: 7
+
+            - uses: isbang/compose-action@v1.4.1
+              with:
+                  compose-file: './docker-compose.ci.yml'
 
             - name: pnpm install
               run: pnpm install --frozen-lockfile
