--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -5,7 +5,11 @@ services:
         extends:
             file: ./docker-compose.base.yml
             service: db
-        environment:
-            - DATABASE_URL=postgresql://postgres:postgres@localhost:5432/ttnmapper-reader
+    pgadmin:
+        extends:
+            file: ./docker-compose.base.yml
+            service: pgadmin
+
 volumes:
     postgres-data:
+    pgadmin-data:
