--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
         "prettier:format": "prettier --write \"src/**/*.ts\"",
         "eslint:scan": "eslint",
         "eslint:fix": "eslint --fix",
-        "compose:up": "docker compose -f ./docker-compose.dev.yml up -d",
+        "compose:up:dev": "docker compose -f ./docker-compose.dev.yml up -d",
         "prisma:reset": "prisma migrate reset",
         "prisma:generate": "prisma generate",
         "prisma:studio": "prisma studio",
