--- a/package.json
+++ b/package.json
@@ -28,27 +28,27 @@
         "@types/jest": "^29.5.0",
         "@types/node": "^18.15.11",
         "@types/supertest": "^2.0.12",
-        "@typescript-eslint/eslint-plugin": "^5.58.0",
-        "@typescript-eslint/parser": "^5.58.0",
+        "@typescript-eslint/eslint-plugin": "^5.59.0",
+        "@typescript-eslint/parser": "^5.59.0",
         "eslint": "^8.38.0",
         "eslint-config-prettier": "^8.8.0",
         "eslint-plugin-prettier": "^4.2.1",
+        "husky": "^8.0.3",
         "jest": "^29.5.0",
         "nodemon": "^2.0.22",
         "pino-pretty": "^10.0.0",
         "prettier": "^2.8.7",
         "prettier-eslint": "^15.0.1",
-        "prisma": "^4.12.0",
+        "prisma": "^4.13.0",
         "supertest": "^6.3.3",
         "ts-jest": "^29.1.0",
         "ts-node": "^10.9.1",
         "tsc-alias": "^1.8.5",
         "tsconfig-paths": "^4.2.0",
-        "typescript": "^5.0.4",
-        "husky": "^8.0.0"
+        "typescript": "^5.0.4"
     },
     "dependencies": {
-        "@prisma/client": "^4.12.0",
+        "@prisma/client": "^4.13.0",
         "@types/superagent": "^4.1.16",
         "cron": "^2.3.0",
         "dotenv": "^16.0.3",
