--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
         "baseUrl": ".",
         "esModuleInterop": true,
         "strict": true,
+        "pretty": true,
         "outDir": "./dist",
         "resolveJsonModule": true,
         "paths": {
