--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "license": "AGPL v3",
     "scripts": {
         "start": "node -r dotenv/config dist/src/server.js",
+        "start:migrate:prod": "pnpm prisma:migrate:prod && pnpm start",
         "dev": "nodemon | pino-pretty --colorize",
         "build": "tsc -p tsconfig.json && tsc-alias -p tsconfig.json",
         "prettier:format": "prettier --write \"src/**/*.ts\"",
@@ -17,6 +18,7 @@
         "prisma:reset": "prisma migrate reset",
         "prisma:generate": "prisma generate",
         "prisma:studio": "prisma studio",
+        "prisma:migrate:prod": "prisma migrate deploy",
         "jest:coverage": "jest --coverage",
         "jest:test": "jest",
         "jest:watch": "jest --watch",
