--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
         "prisma:generate": "prisma generate",
         "prisma:studio": "prisma studio",
         "prisma:migrate:prod": "prisma migrate deploy",
+        "prettier:scan": "prettier --check .",
+        "prettier:fix": "prettier --write .",
         "jest:coverage": "jest --coverage",
         "jest:test": "jest",
         "jest:watch": "jest --watch",
