--- a/docker-compose.base.yml
+++ b/docker-compose.base.yml
@@ -5,7 +5,7 @@ services:
         image: ghcr.io/bassadin/ttnmapper-reader:latest
         build: .
         restart: always
-        depends_on:
+        links:
             - db
         ports:
             - "${PORT}:${PORT}"
