--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "prepare": "husky install"
     },
     "devDependencies": {
+        "@types/cors": "^2.8.13",
         "@types/cron": "^2.0.1",
         "@types/express": "^4.17.17",
         "@types/jest": "^29.5.0",
@@ -54,6 +55,7 @@
     "dependencies": {
         "@prisma/client": "^4.13.0",
         "@types/superagent": "^4.1.16",
+        "cors": "^2.8.5",
         "cron": "^2.3.0",
         "dotenv": "^16.0.3",
         "express": "5.0.0-beta.1",
