--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "ttnmapper-reader",
+    "name": "ttn-locator-backend",
     "author": {
         "name": "Bastian Hodapp",
         "email": "bastianhodapp@gmail.com"
