--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -57,7 +57,7 @@ jobs:
                   version: 7
 
             - name: Start docker compose services
-              run: docker compose -f ./docker-compose.ci.yml up -d
+              run: docker compose -f ./docker-compose.yml up -d db
 
             - name: pnpm install
               run: pnpm install --frozen-lockfile
