--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
         environment:
             - DATABASE_URL=postgresql://postgres:postgres@db:57010/ttn-locator-backend
     db:
-        image: postgres
+        image: postgis/postgis:15-3.3
         environment:
             - POSTGRES_USER=postgres
             - POSTGRES_PASSWORD=postgres
