--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,7 +43,7 @@ jobs:
               uses: actions/checkout@v3
             - name: 🚀 Run yamllint
               uses: frenck/action-yamllint@v1.4.0
-    prisma-migrate-and-jest:
+    build-and-test:
         runs-on: ubuntu-latest
         env:
             DATABASE_URL: postgresql://postgres:postgres@localhost:57010/ttn-locator-backend
@@ -64,14 +64,20 @@ jobs:
                       db
 
             - run: pnpm install --frozen-lockfile
-            - run: npx prisma generate
+            - run: pnpm prisma:generate-client
 
-            - run: pnpm run build
+            - run: pnpm build
+
+            - name: Upload artifact
+              uses: actions/upload-artifact@v2
+              with:
+                  name: ttn-locator-backend
+                  path: dist
 
             - name: Prisma seed
               run: npx prisma migrate reset --force
 
-            - run: pnpm run jest:test
+            - run: pnpm jest:test
     eslint:
         runs-on: ubuntu-latest
         steps:
@@ -85,32 +91,12 @@ jobs:
             - run: pnpm install --frozen-lockfile
             - name: Run eslint scan
               run: pnpm run eslint:scan
-    build-artifact:
-        runs-on: ubuntu-latest
-        needs: [prisma-migrate-and-jest, eslint]
-        steps:
-            - uses: actions/checkout@v3
-            - uses: actions/setup-node@v3
-              with:
-                  node-version: 16
-            - uses: pnpm/action-setup@v2
-              with:
-                  version: 7
-
-            - run: pnpm install --frozen-lockfile
-            - run: pnpm run build
-
-            - name: Upload artifact
-              uses: actions/upload-artifact@v2
-              with:
-                  name: ttn-locator-backend
-                  path: dist
     build-docker:
         runs-on: ubuntu-latest
         permissions:
             packages: write
             contents: read
-        needs: [prisma-migrate-and-jest, eslint]
+        needs: [build-and-test, eslint]
         steps:
             - uses: actions/checkout@v3
 
