--- a/package.json
+++ b/package.json
@@ -21,26 +21,25 @@
         "prisma:migrate:prod": "prisma migrate deploy",
         "prettier:scan": "prettier --check .",
         "prettier:fix": "prettier --write .",
-        "jest:coverage": "jest --coverage",
-        "jest:test": "jest",
-        "jest:watch": "jest --watch",
-        "prepare": "husky install"
+        "prepare": "husky install",
+        "test:ui": "vitest --ui",
+        "test:run": "vitest run"
     },
     "devDependencies": {
         "@mermaid-js/mermaid-cli": "^10.1.0",
         "@types/cors": "^2.8.13",
         "@types/cron": "^2.0.1",
         "@types/express": "^4.17.17",
-        "@types/jest": "^29.5.1",
         "@types/node": "^18.16.9",
         "@types/supertest": "^2.0.12",
         "@typescript-eslint/eslint-plugin": "^5.59.6",
         "@typescript-eslint/parser": "^5.59.6",
+        "@vitest/ui": "^0.31.0",
         "eslint": "^8.40.0",
         "eslint-config-prettier": "^8.8.0",
         "eslint-plugin-prettier": "^4.2.1",
         "husky": "^8.0.3",
-        "jest": "^29.5.0",
+        "jsdom": "^22.0.0",
         "nodemon": "^2.0.22",
         "pino-pretty": "^10.0.0",
         "prettier": "^2.8.8",
@@ -48,11 +47,11 @@
         "prisma": "^4.14.0",
         "prisma-erd-generator": "^1.7.0",
         "supertest": "^6.3.3",
-        "ts-jest": "^29.1.0",
         "ts-node": "^10.9.1",
         "tsc-alias": "^1.8.6",
         "tsconfig-paths": "^4.2.0",
-        "typescript": "^5.0.4"
+        "typescript": "^5.0.4",
+        "vitest": "^0.31.0"
     },
     "dependencies": {
         "@prisma/client": "^4.14.0",
