--- a/.env.sample
+++ b/.env.sample
@@ -1,6 +1,5 @@
-# Prostgres
+# Prisma
 DATABASE_URL=postgresql://postgres:postgres@localhost:57010/ttn-locator-backend
 
 # General
-PORT=3000
 NODE_ENV=development
