--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -58,7 +58,7 @@ jobs:
 
             - uses: isbang/compose-action@v1.4.1
               with:
-                  compose-file: './docker-compose.yml'
+                  compose-file: './docker-compose.test.yml'
                   down-flags: '--volumes'
                   services: |
                       db
