--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -58,8 +58,9 @@ jobs:
 
             - uses: isbang/compose-action@v1.4.1
               with:
-                  compose-file: './docker-compose.test.yml'
+                  compose-file: './docker-compose.yml'
                   down-flags: '--volumes'
+                  services: 'db'
 
             - run: pnpm install --frozen-lockfile
             - run: pnpm prisma:generate-client
