--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
         "@types/cron": "^2.0.1",
         "@types/express": "^4.17.17",
         "@types/jest": "^29.5.1",
-        "@types/node": "^18.16.9",
+        "@types/node": "^18.16.12",
+        "@types/pg": "^8.6.6",
         "@types/supertest": "^2.0.12",
         "@typescript-eslint/eslint-plugin": "^5.59.6",
         "@typescript-eslint/parser": "^5.59.6",
@@ -62,6 +63,7 @@
         "cron": "^2.3.0",
         "dotenv": "^16.0.3",
         "express": "5.0.0-beta.1",
+        "pg": "^8.11.0",
         "pino": "^8.14.1",
         "pino-http": "^8.3.3",
         "superagent": "^8.0.9"
