--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
         "@types/supertest": "^2.0.12",
         "@typescript-eslint/eslint-plugin": "^5.59.6",
         "@typescript-eslint/parser": "^5.59.6",
+        "@vitest/coverage-istanbul": "^0.31.1",
         "@vitest/ui": "^0.31.0",
         "eslint": "^8.40.0",
         "eslint-config-prettier": "^8.8.0",
