--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -10,3 +10,9 @@ services:
             - POSTGRES_DB=ttn-locator-backend_TEST
         ports:
             - "57110:5432"
+        networks:
+            - test-network
+
+networks:
+    test-network:
+        driver: bridge
