--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,8 +1,3 @@
 {
-	"recommendations": [
-		"humao.rest-client",
-		"prisma.prisma",
-		"orta.vscode-jest",
-		"rvest.vs-code-prettier-eslint"
-	]
+    "recommendations": ["humao.rest-client", "prisma.prisma", "orta.vscode-jest", "rvest.vs-code-prettier-eslint"]
 }
