--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,5 @@
 ---
-version: "3"
+version: '3'
 services:
     ttn-locator-backend:
         image: ghcr.io/bassadin/ttn-locator-backend:latest
@@ -8,7 +8,7 @@ services:
         links:
             - db
         ports:
-            - "3000:3000"
+            - '3000:3000'
         environment:
             - DATABASE_URL=postgresql://postgres:postgres@db:5432/ttn-locator-backend
     db:
@@ -20,7 +20,7 @@ services:
         restart: always
         ports:
             # PostgreSQL Port
-            - "57010:5432"
+            - '57010:5432'
         volumes:
             - postgres-data:/var/lib/postgresql/data
     pgadmin:
@@ -33,7 +33,7 @@ services:
             PGADMIN_DEFAULT_PASSWORD: root
         ports:
             # Web Interface
-            - "57050:80"
+            - '57050:80'
         volumes:
             - pgadmin-data:/var/lib/pgadmin
             - ./pgadmin_server_config/servers.json:/pgadmin4/servers.json
