add api key auth middleware

--- a/.env.sample
+++ b/.env.sample
@@ -4,3 +4,6 @@ DATABASE_URL=postgresql://postgres:postgres@localhost:57010/ttn-locator-backend
 # General
 NODE_ENV=development
 PORT=57100
+
+# Auth
+API_KEY=1234567890
