run prisma generate in gh actions build

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -96,6 +96,7 @@ jobs:
                   version: 8
 
             - run: pnpm install --frozen-lockfile
+            - run: pnpm prisma:generate
             - run: pnpm run build
 
             - name: Upload artifact
