--- a/package.json
+++ b/package.json
@@ -26,46 +26,46 @@
         "test:coverage": "vitest run --coverage"
     },
     "devDependencies": {
-        "@mermaid-js/mermaid-cli": "^10.2.4",
+        "@mermaid-js/mermaid-cli": "^10.3.0",
         "@types/cors": "^2.8.13",
-        "@types/cron": "^2.0.1",
         "@types/express": "^4.17.17",
         "@types/jest": "^29.5.3",
-        "@types/node": "^18.16.19",
+        "@types/luxon": "^3.3.1",
+        "@types/node": "^18.17.1",
         "@types/pg": "^8.10.2",
         "@types/supertest": "^2.0.12",
-        "@typescript-eslint/eslint-plugin": "^6.0",
-        "@typescript-eslint/parser": "^6.0",
-        "@vitest/coverage-istanbul": "^0.31.4",
-        "@vitest/ui": "^0.33",
-        "eslint": "^8.45.0",
-        "eslint-config-prettier": "^8.8.0",
-        "eslint-plugin-prettier": "^5.0",
+        "@typescript-eslint/eslint-plugin": "^6.2.1",
+        "@typescript-eslint/parser": "^6.2.1",
+        "@vitest/coverage-istanbul": "^0.34.1",
+        "@vitest/ui": "^0.34.1",
+        "eslint": "^8.46.0",
+        "eslint-config-prettier": "^8.10.0",
+        "eslint-plugin-prettier": "^5.0.0",
         "husky": "^8.0.3",
         "jsdom": "^22.1.0",
-        "nodemon": "^3.0",
-        "pino-pretty": "^10.0.1",
-        "prettier": "^3.0",
+        "nodemon": "^3.0.1",
+        "pino-pretty": "^10.2.0",
+        "prettier": "^3.0.1",
         "prettier-eslint": "^15.0.1",
-        "prisma": "^5.0",
+        "prisma": "^5.1.1",
         "prisma-erd-generator": "^1.8.0",
         "supertest": "^6.3.3",
         "ts-node": "^10.9.1",
         "tsc-alias": "^1.8.7",
         "tsconfig-paths": "^4.2.0",
         "typescript": "^5.1.6",
-        "vitest": "^0.33"
+        "vitest": "^0.34.1"
     },
     "dependencies": {
         "@jcoreio/wait-for-postgres": "^2.0.0",
-        "@prisma/client": "^5.0",
+        "@prisma/client": "^5.1.1",
         "@types/superagent": "^4.1.18",
         "cors": "^2.8.5",
-        "cron": "^2.3.1",
+        "cron": "^2.4.0",
         "dotenv": "^16.3.1",
         "express": "5.0.0-beta.1",
-        "pg": "^8.11.1",
-        "pino": "^8.14.1",
+        "pg": "^8.11.2",
+        "pino": "^8.14.2",
         "pino-http": "^8.3.3",
         "superagent": "^8.0.9"
     },
